# Dynamic-Impact-Tool

./: .env  .gitignore  Dockerfile  HashPassword.py  README.md  app.py  audit_log.json  auth.py  db.py  docker-compose.yml  embed_fonts.py  final_app.py  init_db.py  logs.json  main.py  pyproject.toml  requirements.txt  test.py  test_db_connection.py  tour.py  users.json
Dynamic-Impact-Tool-Backup/: README.md  app.py  requirements.txt
chains/: category_chain.py  comparison_chain.py  insight_chain.py  llms.py  summary_chain.py  visual_chain.py
chat_logs/: 2025-06-24_20-45-58_chat.txt  2025-06-24_20-46-23_chat.txt  2025-06-25_16-15-52_chat.txt
comparison_logs/: 2025-06-25_15-39-34_comparison.txt  2025-06-25_15-43-11_comparison.txt  2025-06-25_15-50-13_comparison.txt  2025-06-25_15-57-32_comparison.txt  2025-06-25_15-57-39_comparison.txt  2025-06-25_16-00-45_comparison.txt  2025-06-25_16-19-05_comparison.txt  2025-06-25_16-19-36_comparison.txt
components/: comparison_section.py  insights_section.py  sidebar.py  summary_section.py  visualizations_section.py
config/: settings.py
exports/: summary.pptx
layout/: playground-3.mongodb.js  sidebar.py  tabs_comparison.py  tabs_single.py  tabs_single_2.py  tabs_usage.py  upload_area.py
models/: local_model.py
mongo_db/: check_saved_chats.py  db.py  mongo.py  mongo_handler.py  mongo_ops.py
prompts/: system_prompts.txt
state/: session_manager.py
utils/: MainVisualizer.py  chat_handler.py  column_selector.py  comparator.py  data_cleaner.py  dataset_comparator.py  export_handler.py  file_loader.py  groq_handler.py  (+20 more)
(+46 files in other folders)
